plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.1'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.n4d3sh1k4'
version = '0.0.1-SNAPSHOT'
description = 'ETA_main'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(23)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    maven {
        url = uri("https://company/com/maven2")
        url = uri("https://raw.githubusercontent.com/mast-group/maven-repo/master/repository/")
        url = uri("https://repo.spring.io/libs-milestone/")
    }
    mavenLocal()
    flatDir {
        dirs "libs"
    }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation "jakarta.persistence:jakarta.persistence-api"
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'io.jsonwebtoken:jjwt-api:0.13.0'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.13.0'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.13.0'
    implementation("org.springframework.data:spring-data-jpa")
    implementation("com.mysql:mysql-connector-j:9.5.0")
    implementation("io.github.cdimascio:java-dotenv:5.2.2")
    implementation("org.springframework.boot:spring-boot-starter-data-jpa:4.0.1")
    implementation 'org.bouncycastle:bcprov-jdk18on:1.78.1'
    implementation "org.springframework.boot:spring-boot-starter-mail:4.0.2"
    implementation("org.springframework.boot:spring-boot-starter-validation:4.0.2")

    //Added swagger
    implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.1")
}

tasks.named('test') {
    useJUnitPlatform()
}
